[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "searchdocs"
version = "0.2.0"
description = "Search the Python documentation from your terminal."
readme = "README.rst"
keywords = [ "documentation", "terminal", "search",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/searchdocs"
"Issue Tracker" = "https://github.com/domdfcoding/searchdocs/issues"
"Source Code" = "https://github.com/domdfcoding/searchdocs"
Documentation = "https://searchdocs.readthedocs.io/en/latest"

[project.scripts]
searchdocs = "searchdocs.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
